fix scrollbar

--- a/src/perfectscrollbar/css/style.less
+++ b/src/perfectscrollbar/css/style.less
@@ -14,3 +14,11 @@
         opacity: 0.4;
     }
 }
+
+.ps__rail-x{
+    z-index: 98765;
+}
+
+.ps__rail-y{
+    z-index: 98765;
+}
